Go back to G1GC